// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`001: missing project 1`] = `
"   
   new-app 0.2.2 
   
   Project name is required. 
   
   Usage: 
   npx new-app <project> <directory> 
   
   For help resolving this problem please visit: 
   https://github.com/MattStypa/new-app/issues 
   
"
`;

exports[`002: missing directory 1`] = `
"   
   new-app 0.2.2 
   
   Destination directory is required. 
   
   Usage: 
   npx new-app <project> <directory> 
   
   For help resolving this problem please visit: 
   https://github.com/MattStypa/new-app/issues 
   
"
`;

exports[`003: directory exists 1`] = `
"   
   new-app 0.2.2 
   
   Directory already exists. 
   /Users/mattstypa/Code/new-app/__tests__ 
   
   For help resolving this problem please visit: 
   https://github.com/MattStypa/new-app/issues 
   
"
`;

exports[`004: github network error 1`] = `
"   
   new-app 0.2.2 
   
   Network error. 
   https://api.github.com/repos/new/app/releases/latest 
   
   For help resolving this problem please visit: 
   https://github.com/MattStypa/new-app/issues 
   
"
`;

exports[`005: github server error 1`] = `
"   
   new-app 0.2.2 
   
   Server error. 
   https://api.github.com/repos/new/app/releases/latest 
   Internal Server Error 
   
   For help resolving this problem please visit: 
   https://github.com/MattStypa/new-app/issues 
   
"
`;

exports[`006: github bad response 1`] = `
"   
   new-app 0.2.2 
   
   Unable to read data. 
   https://api.github.com/repos/new/app/releases/latest 
   
   For help resolving this problem please visit: 
   https://github.com/MattStypa/new-app/issues 
   
"
`;

exports[`007: repository not found 1`] = `
"   
   new-app 0.2.2 
   
   Repository, branch, or tag not found. 
   new/app#master 
   
   For help resolving this problem please visit: 
   https://github.com/MattStypa/new-app/issues 
   
"
`;

exports[`008: truncated repository 1`] = `
"   
   new-app 0.2.2 
   
   Repository is too large. 
   new/app#master 
   
   For help resolving this problem please visit: 
   https://github.com/MattStypa/new-app/issues 
   
"
`;

exports[`009: empty repository 1`] = `
"   
   new-app 0.2.2 
   
   Repository is empty. 
   new/app#master 
   
   For help resolving this problem please visit: 
   https://github.com/MattStypa/new-app/issues 
   
"
`;

exports[`010: repository path not found 1`] = `
"   
   new-app 0.2.2 
   
   Repository path not found. 
   d 
   
   For help resolving this problem please visit: 
   https://github.com/MattStypa/new-app/issues 
   
"
`;

exports[`011: download master branch 1`] = `
"   
   new-app 0.2.2 
   
   Please wait ... 
   
   new/app#master has been set up in /Users/mattstypa/Code/new-app/path 
   
"
`;
